# article-pipeline

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/consumer/: __init__.py  consumer.py
src/database/: __init__.py  mongodb.py  redis_client.py
src/publisher/: __init__.py  publisher.py
src/services/: __init__.py  scraper.py
src/utils/: __init__.py  base.py  cache.py  config.py  enricher.py  url_normalizer.py
web/: run.py
web/app/: __init__.py
web/app/controller/: __init__.py  dashboard_controller.py
web/app/model/: __init__.py  article_model.py  database.py  pipeline_monitor.py
web/app/view/: __init__.py
web/app/view/static/css/: dashboard.css
web/app/view/templates/: error.html
web/app/view/templates/dashboard/: index.html
